syntax="proto3";
package proto;

message ReqBase{
    string msgid = 1;
};

message RespBase{
    string msgid = 1;
    int64  errorCode = 3;
    string error = 4;//error info;
};

message KeyValue{
  bytes key   = 1;
  bytes value = 2;
};


message ReqSet{
    ReqBase  base = 1;
    string dbName = 2;
    KeyValue kv = 3;
};

message ReqGet{
    ReqBase  base = 1;
    string dbName = 2;
    bytes key = 3;
}

message RespGet{
    RespBase base = 1;
    KeyValue kv = 2;
};

message ReqDelete{
    ReqBase  base = 1;
    string dbName = 2;
    bytes key = 3;
}

message ReqGetByPrefix{
    ReqBase base = 1;
    string dbName = 2;
    bytes prefix = 3;
    bytes lastKey = 4;//key of last time get;
    int64 limit = 5;
}

message RespGetByPrefix{
    RespBase base = 1;
    repeated KeyValue list = 2;
}

message ReqBatch{
    ReqBase base = 1;
    string dbName = 2;
    repeated KeyValue sets = 3;
    repeated bytes    dels = 4;
};

message ReqIsExist{
    ReqBase base = 1;
    string dbName = 2;
    bytes key = 3;
}

message RespIsExist{
    RespBase base = 1;
    bool     isExist = 2;
}

enum PropertyType{
    stats = 0;
    writedelay = 1;
    iostats = 2;
}

message ReqGetProperty{
    ReqBase  base = 1;
    string dbName = 2;
    PropertyType property = 3;
}

message RespGetProperty{
    RespBase base = 1;
    string   ret = 2;
}